--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="menu">
         <ul>
           <li><a href="">home</a></li>
-          <li><a href="">home</a></li>
-          <li><a href="">home</a></li>
-          <li><a href="">home</a></li>
+          <li><a href="">Shop</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
         </ul>
     </div>
     <div class="heder-icon">
